--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "webpack": "webpack",
-    "dev": "webpack-dev-server --content-base build/"
+    "start": "webpack-dev-server --content-base build/",
+    "dev": "webpack-dev-server --content-base build/",
+    "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "repository": {
     "type": "git",
@@ -17,18 +21,25 @@
   "bugs": {
     "url": "https://github.com/ChrisRaveendra/BeautyProductTinder/issues"
   },
-  "homepage": "https://github.com/ChrisRaveendra/BeautyProductTinder#readme",
+  "homepage": "https://ChrisRaveendra.github.io/BeautyProductTinder",
   "dependencies": {
+    "axios": "^0.18.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "^1.1.4",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0",
     "webpack": "^4.11.1",
     "webpack-cli": "^3.0.3"
   },
   "devDependencies": {
+    "gh-pages": "^1.2.0",
     "webpack-dev-server": "^3.1.4"
   }
 }
